# Manage-Geocache-Challenge-Logs

./: CHANGES.md  HTML_TARGETS.md  README.md  challenge_write_notes_20260330_230733.csv  challenge_write_notes_in_progress copy.csv  challenge_write_notes_in_progress.csv  example.env  pyproject.toml  python-requirements.txt  run.sh
src/: app_refs.py  functions.py  main.py
